--- a/NoteApp/Base.lproj/LaunchScreen.storyboard
+++ b/NoteApp/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +12,46 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pTd-e1-fcx">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.15377204392204324" green="0.80608476279872721" blue="1" alpha="0.57303587147887325" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="256.png" translatesAutoresizingMaskIntoConstraints="NO" id="mta-YB-Gbe">
+                                <rect key="frame" x="83" y="320" width="249" height="256"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="i Pet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9HD-Gq-1J5">
+                                <rect key="frame" x="146.5" y="171" width="121.5" height="120"/>
+                                <fontDescription key="fontDescription" name="SavoyeLetPlain" family="Savoye LET" pointSize="100"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pTd-e1-fcx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4VK-BS-62a"/>
+                            <constraint firstItem="mta-YB-Gbe" firstAttribute="top" secondItem="9HD-Gq-1J5" secondAttribute="bottom" constant="29" id="6D4-ao-Zi4"/>
+                            <constraint firstItem="pTd-e1-fcx" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="9o8-e9-2Dj"/>
+                            <constraint firstItem="mta-YB-Gbe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="83" id="JiB-pP-2TR"/>
+                            <constraint firstItem="9HD-Gq-1J5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="127" id="LCg-82-lsV"/>
+                            <constraint firstItem="mta-YB-Gbe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Qxc-Wq-DO3"/>
+                            <constraint firstItem="9HD-Gq-1J5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="RVg-s0-lji"/>
+                            <constraint firstItem="mta-YB-Gbe" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Tfv-1j-Aup"/>
+                            <constraint firstItem="pTd-e1-fcx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="WAY-hO-NY6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mta-YB-Gbe" secondAttribute="trailing" constant="82" id="WtE-t5-izd"/>
+                            <constraint firstAttribute="bottom" secondItem="pTd-e1-fcx" secondAttribute="bottom" id="az9-4g-XPu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="256.png" width="256" height="256"/>
+    </resources>
 </document>
