--- a/NoteApp/Base.lproj/Main.storyboard
+++ b/NoteApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87U-3K-FXp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="87U-3K-FXp">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -130,7 +130,7 @@
                                 </items>
                             </toolbar>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="標題" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1P9-iV-obm">
-                                <rect key="frame" x="10" y="150" width="394" height="33"/>
+                                <rect key="frame" x="10" y="98" width="394" height="33"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="33" id="YSu-Lk-6Xy"/>
@@ -140,11 +140,11 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DOs-SX-joi">
-                                <rect key="frame" x="10" y="585.66666666666663" width="394" height="168.33333333333337"/>
+                                <rect key="frame" x="10" y="572.66666666666663" width="394" height="181.33333333333337"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="輸入回憶" translatesAutoresizingMaskIntoConstraints="NO" id="00F-zS-BUz">
-                                <rect key="frame" x="20" y="191.00000000000003" width="374" height="386.66666666666674"/>
+                                <rect key="frame" x="20" y="139.00000000000003" width="374" height="425.66666666666674"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
@@ -190,7 +190,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="gHk-kW-bB9">
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="gHk-kW-bB9">
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="NLE-7e-QSK">
                             <connections>
                                 <action selector="done:" destination="y80-Q0-T1a" id="khh-Pa-W5v"/>
@@ -415,8 +415,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lae-R1-vjC">
-                                <rect key="frame" x="30" y="547" width="354" height="54"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lae-R1-vjC">
+                                <rect key="frame" x="30" y="520" width="354" height="30"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="BUW-84-gjY"/>
@@ -428,8 +428,8 @@
                                     <action selector="askForRating" destination="CGU-vu-Zln" eventType="touchUpInside" id="97K-OG-kIN"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBC-xO-rLI">
-                                <rect key="frame" x="30" y="470" width="354" height="54"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBC-xO-rLI">
+                                <rect key="frame" x="30" y="470" width="354" height="30"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="XRT-nv-vBv"/>
@@ -446,12 +446,23 @@
                         <constraints>
                             <constraint firstItem="UBC-xO-rLI" firstAttribute="leading" secondItem="C3v-E8-BFc" secondAttribute="leading" constant="30" id="3hA-DT-Xb6"/>
                             <constraint firstItem="C3v-E8-BFc" firstAttribute="trailing" secondItem="UBC-xO-rLI" secondAttribute="trailing" constant="30" id="8Qr-BB-dVU"/>
+                            <constraint firstItem="C3v-E8-BFc" firstAttribute="trailing" secondItem="UBC-xO-rLI" secondAttribute="trailing" constant="30" id="B0b-G0-YZI"/>
+                            <constraint firstItem="lae-R1-vjC" firstAttribute="leading" secondItem="C3v-E8-BFc" secondAttribute="leading" constant="30" id="DUV-fA-Mf0"/>
                             <constraint firstItem="lae-R1-vjC" firstAttribute="leading" secondItem="C3v-E8-BFc" secondAttribute="leading" constant="30" id="J7d-bN-xEn"/>
                             <constraint firstItem="C3v-E8-BFc" firstAttribute="trailing" secondItem="lae-R1-vjC" secondAttribute="trailing" constant="30" id="PfU-0x-6km"/>
+                            <constraint firstItem="UBC-xO-rLI" firstAttribute="top" secondItem="C3v-E8-BFc" secondAttribute="top" constant="470" id="WYh-LM-nmo"/>
+                            <constraint firstItem="lae-R1-vjC" firstAttribute="top" secondItem="UBC-xO-rLI" secondAttribute="bottom" constant="20" id="YjC-SM-4sf"/>
+                            <constraint firstItem="C3v-E8-BFc" firstAttribute="bottom" secondItem="lae-R1-vjC" secondAttribute="bottom" constant="258" id="fPi-9J-ZA1"/>
+                            <constraint firstItem="C3v-E8-BFc" firstAttribute="trailing" secondItem="lae-R1-vjC" secondAttribute="trailing" constant="30" id="gPs-cb-Z2R"/>
+                            <constraint firstItem="UBC-xO-rLI" firstAttribute="leading" secondItem="C3v-E8-BFc" secondAttribute="leading" constant="30" id="tQy-K6-ndL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="C3v-E8-BFc"/>
                     </view>
                     <navigationItem key="navigationItem" id="X60-I1-MzV"/>
+                    <connections>
+                        <outlet property="askForRatingOutlet" destination="lae-R1-vjC" id="Xxd-0K-MFU"/>
+                        <outlet property="supportOutlet" destination="UBC-xO-rLI" id="UXR-9Z-Cjt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6vO-NS-PMk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -874,15 +885,15 @@
         </scene>
     </scenes>
     <resources>
-        <image name="camera.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="house" catalog="system" width="128" height="110"/>
-        <image name="location.circle" catalog="system" width="128" height="121"/>
-        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
-        <image name="map" catalog="system" width="128" height="113"/>
-        <image name="person.crop.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="photo" catalog="system" width="128" height="93"/>
-        <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="sun.min" catalog="system" width="128" height="121"/>
+        <image name="camera.circle.fill" catalog="system" width="64" height="60"/>
+        <image name="house" catalog="system" width="64" height="54"/>
+        <image name="location.circle" catalog="system" width="64" height="60"/>
+        <image name="magnifyingglass" catalog="system" width="64" height="56"/>
+        <image name="map" catalog="system" width="64" height="56"/>
+        <image name="person.crop.circle.fill" catalog="system" width="64" height="60"/>
+        <image name="photo" catalog="system" width="64" height="46"/>
+        <image name="plus.circle.fill" catalog="system" width="64" height="60"/>
+        <image name="sun.min" catalog="system" width="64" height="60"/>
         <image name="weather" width="1024" height="1024"/>
     </resources>
 </document>
